Minor alignment fixes

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -242,7 +242,7 @@
     --neeto-ui-btn-focus-color: rgb(var(--neeto-ui-info-700));
     --neeto-ui-btn-focus-opacity: 0.8;
     --neeto-ui-btn-focus-visible-color: rgb(var(--neeto-ui-info-700));
-    --neeto-ui-btn-focus-visible-outline: 3px solid rgba(var(--neeto-ui-accent-600), 50%);
+    --neeto-ui-btn-focus-visible-outline: 3px solid rgba(var(--neeto-ui-info-600), 50%);
     --neeto-ui-btn-text-decoration: none;
     --neeto-ui-btn-hover-text-decoration: underline;
     --neeto-ui-btn-ripple-color: transparent;
