--- a/src/styles/components/_checkbox.scss
+++ b/src/styles/components/_checkbox.scss
@@ -45,12 +45,11 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
 
     .neeto-ui-label {
       margin-inline-start: var(--neeto-ui-checkbox-label-margin);
       line-height: var(--neeto-ui-checkbox-label-line-height);
-      font-size: var(--neeto-ui-checkbox-label-font-size);
     }
 
     .neeto-ui-checkbox[type="checkbox"] {
